# espidftemplate-with-wamr

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  build_flash_monitor.sh  build_plugins.sh  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
plugins/assemblyscript/: package-lock.json  package.json
plugins/assemblyscript/assembly/: index.ts
plugins/c/: Makefile  plugin.c
plugins/rust/: Cargo.toml
plugins/rust/src/: lib.rs
src/: main.rs
src/plugins/assemblyscript/: package.json
src/plugins/assemblyscript/assembly/: index.ts
src/plugins/rust/: Cargo.toml
src/plugins/rust/src/: lib.rs
