[package]
name = "espidftemplate"
version = "0.1.0"
authors = ["Mael Primet <mael.primet@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "espidftemplate"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk#725e8e4fcd6dd103640b39b5564d2a9ac55e16f2", features = ["esp-idf"] }

[build-dependencies]
embuild = "0.33"
